[gd_scene load_steps=14 format=3 uid="uid://cyd0ctjbxd50n"]

[ext_resource type="Script" path="res://scripts/player_scene.gd" id="1_8yafj"]
[ext_resource type="Texture2D" uid="uid://bh2ny2kyo654t" path="res://textures/character.png" id="2_ac37m"]
[ext_resource type="PackedScene" uid="uid://kafedwwldbio" path="res://scenes/player_ui_scene.tscn" id="3_xe52c"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_ncbpk"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("Sprite2D:frame")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Sprite2D:flip_h")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="RectangleShape2D" id="RectangleShape2D_w75gk"]
size = Vector2(4.87445, 8.98144)

[sub_resource type="Animation" id="Animation_kffkm"]
resource_name = "Death"
length = 0.7
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [23, 24, 25, 26, 27, 28]
}

[sub_resource type="Animation" id="Animation_jo0lh"]
resource_name = "Falling"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [12, 13]
}

[sub_resource type="Animation" id="Animation_e0prb"]
resource_name = "Hurt"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_l35h8"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="Animation" id="Animation_3yopr"]
resource_name = "Jumping"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}

[sub_resource type="Animation" id="Animation_nq6ou"]
resource_name = "Moving"
length = 0.54
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.09, 0.18, 0.27, 0.36, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_hi4sw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gxqod"]
_data = {
"Death": SubResource("Animation_kffkm"),
"Falling": SubResource("Animation_jo0lh"),
"Hurt": SubResource("Animation_e0prb"),
"Idle": SubResource("Animation_l35h8"),
"Jumping": SubResource("Animation_3yopr"),
"Moving": SubResource("Animation_nq6ou"),
"RESET": SubResource("Animation_hi4sw")
}

[node name="PlayerScene" type="CharacterBody2D"]
platform_wall_layers = 1
script = ExtResource("1_8yafj")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_ac37m")
hframes = 33
frame = 1

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_ncbpk")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1.5, -4.0011)
scale = Vector2(6.77, 6.77)
shape = SubResource("RectangleShape2D_w75gk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.5, -1.9779)
scale = Vector2(6.24, 6.24)
shape = SubResource("RectangleShape2D_w75gk")

[node name="Hud" parent="." instance=ExtResource("3_xe52c")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gxqod")
}

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_respawn_timer_timeout"]
[connection signal="timeout" from="RespawnTimer" to="." method="_on_timer_timeout"]
